tests/parser/should_fail/OpaqueParseFail1.hs
module OpaqueParseFail1 where

f = id
{-# OPAQUE[1] f #-}
